# template-python

./: .buildinfo  .gitignore  .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  data.json  development-requirements.txt  documentation-requirements.txt  endpoint.json  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python-template.py  requirements.txt  search.html  searchindex.js  setup.cfg  template-python.py  template_python.html
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: react-ux-reviewer.md
.claude/commands/: code-review-http.md  mjd-command.md  senzing-issue-fix-proposal.md
.doctrees/: environment.pickle  index.doctree  modules.doctree  template_python.doctree
.github/: CODEOWNERS  dependabot.yml
.github/linters/: README.md
.github/workflows/: README.md  add-to-project-g2-python-dependabot.yaml  add-to-project-g2-python.yaml  add-to-project-garage.yaml  add-to-project-t-ast.yaml  bandit.yaml  bearer.yaml  black.yaml  check-development-dependencies.yaml  create-sphinx-documentation.yaml  dependabot-approve-and-merge.yaml  dependency-scan.yaml  docker-build-container.yaml  docker-verify-refreshed-at-updated.yaml  flake8.yaml  isort.yaml  mypy.yaml  pylint.yaml  pytest-darwin.yaml  pytest-linux.yaml  pytest-windows.yaml  pytest-windows.yaml.disabled
.github/workflows/examples/: add-to-project-g2-python.yaml  add-to-project-t-comm.yaml  add-to-project-t-gdev.yaml
_modules/: index.html
_modules/template_python/: example.html
_sources/: index.rst.txt  modules.rst.txt
docs/: README.md  best-practices.md  development.md  errors.md  examples.md
docs/source/: conf.py  template_python.rst
helloworld/: __init__.py  helloworld.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_template-python_py.html  z_d913748e35142ffd_example_py.html  z_d913748e35142ffd_template-python_py.html
makefiles/: darwin.mk  linux.mk  windows.mk
src/: template-python.py
src/template_python/: example.py  template-python.py
tests/: sample_test.py  template_python_example_test.py  test_class.py  test_sample.py
