[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest", "coverage"]

[project]
name = template-python
dependencies = [
  less==0.0.1
]

[project.optional-dependencies]
development = [
  bandit==1.8.2
  black==25.1.0
  build==1.2.2.post1
  coverage==7.6.10
  flake8==7.1.1
  fpvs==0.3.0
  isort==6.0.0
  mypy==1.14.1
  psutil==6.1.1
  pylint==3.3.4
  pytest-cov==6.0.0
  pytest-schema==0.1.2
  pytest==8.3.4
  sphinx-autodoc-typehints==3.0.1
  sphinx-gallery==0.18.0
  sphinx-jinja2-compat==0.3.0
  sphinx-prompt==1.9.0
  sphinx-rtd-theme==3.0.2
  sphinx-tabs==3.4.7
  sphinx-toolbox==3.8.0
  sphinx==8.1.3
  sphinxcontrib-applehelp==2.0.0
  sphinxcontrib-devhelp==2.0.0
  sphinxcontrib-htmlhelp==2.1.0
  sphinxcontrib-jquery==4.1
  sphinxcontrib-jsmath==1.0.1
  sphinxcontrib-qthelp==2.0.0
  sphinxcontrib-serializinghtml==2.0.0
  twine==6.1.0
  virtualenv==20.29.1
  wheel==0.45.1
]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
src_paths = ["examples", "src", "tests"]

[[tool.mypy.overrides]]
module = "senzing_abstract.szengineflags.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = "true"

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
    "broad-except",
    "consider-using-f-string",
    "line-too-long",
    "too-many-branches",
    "too-many-locals"
]
good-names = [
    "template-python"
]
ignore = [
    "__init__.py",
    "docs/source/conf.py"
]
notes = [
    "FIXME"
]
