[project]
name = "template-python"
dynamic = ["version"]
description = "Template for Python programs"
authors = [{ name = "senzing", email = "support@senzing.com" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["less==0.0.1"]
license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

[project.urls]
bugtracker = "https://github.com/senzing-garage/template-python/issues"
changelog = "https://github.com/senzing-garage/template-python/blob/main/CHANGELOG.md"
source = "https://github.com/senzing-garage/template-python"

[project.entry-points."console.scripts"]
template_python = "template_python.main_entry:main"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest", "coverage"]
development = [
  { include-group = "documentation" },
  { include-group = "lint" },
  "build==1.3.0",
  "coverage==7.10.6",
  "cryptography==45.0.7",
  "psutil==7.0.0",
  "pylint-per-file-ignores==2.0.3",
  "pytest-cov==6.2.1",
  "pytest-schema==0.1.2",
  "pytest==8.4.2",
  "twine==6.2.0",
  "virtualenv==20.34.0",
  "wheel==0.46.1",
]
documentation = [
  "autodocsumm==0.2.14",
  "myst_parser==4.0.1",
  "sphinx",
  "sphinx-autodoc-typehints==3.1.0; python_version > '3.11'",
  "sphinx-autodoc-typehints==3.0.1; python_version < '3.11'",
  "sphinx-gallery==0.19.0",
  "sphinx-jinja2-compat==0.4.1",
  "sphinx-prompt==1.9.0",
  "sphinx-rtd-theme==3.0.2",
  "sphinx-tabs==3.4.*",
  "sphinx-toolbox==4.0.0",
  "sphinxcontrib-applehelp==2.0.0",
  "sphinxcontrib-devhelp==2.0.0",
  "sphinxcontrib-htmlhelp==2.1.0",
  "sphinxcontrib-jquery==4.1",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==2.0.0",
  "sphinxcontrib-serializinghtml==2.0.0",
  "sphinxext-remoteliteralinclude==0.6.0",
]
lint = [
  "bandit==1.8.6",
  "black==25.1.0",
  "flake8==7.3.0",
  "fpvs==0.3.0",
  "isort==6.0.1",
  "mypy==1.17.1",
  "pylint==3.3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
src_paths = ["examples", "src", "tests"]

[[tool.mypy.overrides]]
module = "senzing_abstract.szengineflags.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "pytest_schema.*"
ignore_missing_imports = "true"

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
  "broad-except",
  "consider-using-f-string",
  "line-too-long",
  "too-many-branches",
  "too-many-locals",
]

good-names = ["template-python"]
ignore = ["__init__.py", "docs/source/conf.py"]
notes = ["FIXME"]
