[metadata]
name = senzing-next
version = 0.0.1
author = senzing
author_email = support@senzing.com
description = Python SDK for Senzing API
license = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzing-garage/g2-sdk-python-next
project_urls =
    Bug Tracker = https://github.com/senzing-garage/g2-sdk-python-next/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
