[metadata]
name = template-python
version = 0.0.1
author = senzing
author_email = support@senzing.com
description = Template for Python programs
license = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/senzing-garage/template-python
project_urls =
    Bug Tracker = https://github.com/senzing-garage/template-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    template_python = template_python.main_entry:main
